# Post-Duplication-Fate-Framework

./: README.md
Edited Aevol/: .clang-format  AUTHORS  CMakeLists.txt  ChangeLog
Edited Aevol/CMakeScripts/: aevol_version.cmake
Edited Aevol/doc/: Makefile.am  README.txt  aevol.conf  aevol_create.1  aevol_misc_ancstats.1  aevol_misc_compute_pop_stats.1  aevol_misc_create_eps.1  aevol_misc_extract.1  aevol_misc_fixed_mutations.1  aevol_misc_gene_families.1  aevol_misc_lineage.1  aevol_misc_mutagenesis.1  aevol_misc_robustness.1  aevol_misc_view_generation.1  aevol_modify.1  aevol_propagate.1  aevol_run.1
Edited Aevol/doc/dev/: BoilerplateClass.cpp  BoilerplateClass.h
Edited Aevol/doc/user_guide/: 0_introduction.tex  1_installation.tex  2_first_run.tex  3_using_aevol.tex  manual.cls  user_manual.tex
Edited Aevol/doc/user_guide/backmatter/: appendix1.tex  appendix2.tex
Edited Aevol/doc/user_guide/frontmatter/: titlepage.tex
Edited Aevol/examples/basic/: param.in
Edited Aevol/examples/basic/exp_setup/: exp_setup_const.ae
Edited Aevol/examples/basic/output_profile/: output_profile.ae
Edited Aevol/examples/basic/stats/: stat_bp_best.out  stat_bp_glob.out  stat_fitness_best.out  stat_fitness_glob.out  stat_fitness_sdev.out  stat_fitness_skew.out  stat_genes_best.out  stat_genes_glob.out  stat_mutation_best.out  stat_mutation_glob.out  stat_rear_best.out  stats_simd_best.csv
Edited Aevol/examples/basic/world/: world_000000000.ae
Edited Aevol/examples/basic_regul/: param.in
Edited Aevol/examples/complex_env/: param.in
Edited Aevol/examples/dynamic_env/: binding_matrix.rae  param.in
Edited Aevol/examples/lateral-transfer-by-replacement/: README  param.in
Edited Aevol/examples/standard/: .param.in.swp  WT0.txt  WT3.txt  lignée_old.txt  lineage-b000000000-e000010000-i3-r-1.ae  param.in  proteins_list_after_events.csv  proteins_map_event.csv
Edited Aevol/examples/standard/exp_setup/: exp_setup_const.ae
Edited Aevol/examples/standard/output_profile/: output_profile.ae
Edited Aevol/examples/standard/stats/: stat_bp_best.out  stat_fitness_best.out  stat_fitness_glob.out  stat_fitness_sdev.out  stat_fitness_skew.out  stat_genes_best.out  stat_genes_glob.out  stat_rear_glob.out  stats_simd_best.csv
Edited Aevol/examples/standard/tree/: tree_000000100.ae  tree_000000200.ae  tree_000000300.ae  tree_000000400.ae  tree_000000500.ae  tree_000000600.ae  tree_000000700.ae  tree_000000800.ae  tree_000000900.ae  tree_000001000.ae  tree_000001100.ae  tree_000001200.ae  tree_000001300.ae  tree_000001400.ae  tree_000001500.ae  tree_000001600.ae  tree_000001700.ae  tree_000001800.ae  tree_000001900.ae  tree_000002000.ae  tree_000002100.ae  tree_000002200.ae  tree_000002300.ae  tree_000002400.ae  tree_000002500.ae  tree_000002600.ae  tree_000002700.ae  tree_000002800.ae  tree_000002900.ae  tree_000003000.ae  tree_000003100.ae  tree_000003200.ae  tree_000003300.ae  tree_000003400.ae  tree_000003500.ae  tree_000003600.ae  tree_000003700.ae  tree_000003800.ae  tree_000003900.ae  tree_000004000.ae  (+60 more)
Edited Aevol/examples/standard/world/: world_000000000.ae  world_000001000.ae  world_000002000.ae  world_000003000.ae  world_000004000.ae  world_000005000.ae  world_000006000.ae  world_000007000.ae  world_000008000.ae  world_000009000.ae  world_000010000.ae
Edited Aevol/examples/with_space/: param.in
Edited Aevol/examples/workflow/: README
Edited Aevol/examples/workflow/wild_type/: param.in
Edited Aevol/execo/: aevol_besteffort_resume.py  basic_param.in  basic_param_regul.in  execo2csv.py  grenoble_cluster.py  local_compil.py  raevol_besteffort_mut_lat.py  raevol_besteffort_mut_lat_lyon.py  thread_test.py
Edited Aevol/execo/mut_lat/: binding_matrix.rae  param_tmpl.in
Edited Aevol/src/: CMakeLists.txt  aevol_create.cpp  aevol_modify.cpp  aevol_propagate.cpp  aevol_run.cpp  change_env.cpp  change_exp_setup.cpp  change_pop.cpp
Edited Aevol/src/libaevol/: AeTime.cpp  AeTime.h  CMakeLists.txt  GzHelpers.h  ae_enums.h  ae_logger.h  aevol.h  aevol_version.cpp.in  aevol_version.h  macros.h
Edited Aevol/src/libaevol/7/: AbstractFuzzy_7.h  Abstract_Metadata.cpp  Abstract_Metadata.h  Discrete_Double_Fuzzy copy.cpp  Discrete_Double_Fuzzy copy.h  Discrete_Double_Fuzzy.cpp  Discrete_Double_Fuzzy.h  DnaFactory.cpp  DnaFactory.h  DnaMutator.cpp  DnaMutator.h  Dna_7.cpp  Dna_7.h  DynTab_Metadata.cpp  DynTab_Metadata.h  ExpManager_7.cpp  ExpManager_7.h  FuzzyFactory_7.cpp  FuzzyFactory_7.h  Individual_7.cpp  Individual_7.h  List_Fuzzy.cpp  List_Fuzzy.h  List_Metadata.cpp  List_Metadata.h  Map_Metadata.cpp  Map_Metadata.h  MutationEvent.cpp  MutationEvent.h  Promoter.cpp  Promoter.h  Protein_7.cpp  Protein_7.h  Rna_7.cpp  Rna_7.h  Stats_7.cpp  Stats_7.h  Vector_Fuzzy.cpp  Vector_Fuzzy.h
Edited Aevol/src/libaevol/biochemistry/: Alignment.cpp  Alignment.h  Codon.cpp  Codon.h  Dna.cpp  Dna.h  GeneticUnit.cpp  GeneticUnit.h  Protein.cpp  (+9 more)
Edited Aevol/src/misc/: continue_all_IN2P3.py  continue_from_last_backup.py  make_big_backup_IN2P3.py  movies.py  prepare_exp_IN2P3.py
Edited Aevol/src/post_treatments/: CMakeLists.txt  aevol_post_ancestor_mutagenesis.cpp  aevol_post_ancestor_network.cpp  aevol_post_ancestor_network_knockout_7.cpp  aevol_post_ancestor_robustness.cpp  aevol_post_ancestor_stats.cpp  aevol_post_ancestor_stats_7.cpp  aevol_post_change_size_neutral_mut.cpp  aevol_post_coalescence.cpp  aevol_post_create_csv_7.cpp  aevol_post_create_eps.cpp  aevol_post_create_eps_7.cpp  aevol_post_extract.cpp  aevol_post_extract_genome_structure.cpp  aevol_post_lineage.cpp  aevol_post_lineage_json.cpp  aevol_post_muller.cpp  aevol_post_mutagenesis.cpp  aevol_post_neutral_mut_acc.cpp  aevol_post_neutral_shuffle_genome.cpp  aevol_post_protein_map.cpp  aevol_post_robustness.cpp  aevol_post_robustness_bias.cpp  aevol_post_robustness_json.cpp  aevol_post_soft_lineage.cpp  aevol_post_test_json.cpp  testJSON.cpp
Edited Aevol/test/: .gitignore  CMakeLists.txt  IndividualTest.cpp  JumpingMTTest.cpp  SampleTest.cpp  TranscriptionTranslationTest.cpp
Edited Aevol/test/googletest/: CMakeLists.txt
(+414 files in other folders)
